--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,19 +1,15 @@
-# Change these first
+a# Change these first
 owner: pablokbs # Your GitHub organization or username, where this repository lives
 repo: upptime # The name of this repository
 
 sites:
   - name: Google
     url: https://www.google.com
-  - name: Fredrikson
-    url: https://www.fredrikson.com.ar
-  - name: Pelado Nerd
-    url: https://www.peladonerd.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: Peperina Software
+    url: https://peperina.io
 
 assignees:
-  - pablokbs
+  - maximilianobz
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
